--- a/style.css
+++ b/style.css
@@ -19,6 +19,14 @@ body {
   z-index: 99999;
   border-radius: 50%;
   background-color: #fff;
+  display: flex;
+  align-items: center;
+  justify-self: center;
+}
+
+#minicircle p {
+  margin-left: 2vw;
+  display: none;
 }
 
 .bounding {
